Fix nav overflow
For to long Strings (e.g. translated) it's possible to overflow (at least) the left navigation. This Pull request should fix that.

--- a/style/base/navs.scss
+++ b/style/base/navs.scss
@@ -43,6 +43,7 @@
     }
     &.nav-left > .nav-col {
         margin-right: 22px;
+        hyphens: auto;
     }
     &.nav-right > .nav-col {
         margin-left: 22px;
